Fix second row overflow due to filters height

--- a/react/searchResult.css
+++ b/react/searchResult.css
@@ -3,6 +3,7 @@
   display: -ms-grid;
   grid-template-columns: 230px repeat(4, auto) 306px;
   -ms-grid-columns: 230px (1fr)[4] 306px;
+  grid-template-rows: auto auto 60px auto;
   grid-template-areas:
     "breadcrumb breadcrumb breadcrumb breadcrumb breadcrumb breadcrumb"
     "title title title title title title"
@@ -198,6 +199,7 @@
   .container {
     -ms-grid-columns: 180px (1fr)[4] 306px;
     grid-template-columns: 180px repeat(4, auto) 285px;
+    grid-template-rows: auto;
   }
 }
 
@@ -219,6 +221,7 @@
       "orderby border filters borderseq switch"
       "quantity quantity quantity quantity quantity"
       "gallery gallery gallery gallery gallery";
+    grid-template-rows: auto;
   }
 
   .resultGallery {
